--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- This is a comment -->
-<h1>Hello World</h1>
+<h1>GEOG 492 first html file</h1>
     
     <!--<div id="main" class>-->
     <!--    <p id="foo">This is my first paragraph.</p>-->
