--- a/Assignments/Assignment6.html
+++ b/Assignments/Assignment6.html
@@ -85,10 +85,11 @@
         // Initialize the map
         var map = new mapboxgl.Map({
             container: 'map', // id of a div on your page, where the map will be inserted
-            style: 'mapbox://styles/mapbox/outdoors-v11', // stylesheet location
+            style: 'mapbox://styles/mapbox/dark-v11', // stylesheet location
             center: [-122.6788, 45.5212], // starting position [lng, lat] eg. [-122.6788, 45.5212]
             zoom: 13 // starting zoom 
         });
+	map.dragPan.disable(); 
 
         /***  POPUPS  ***/
             
