--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -16,7 +16,7 @@
 <body>
 <div id="map"></div>
 <script>
-  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN'; // Replace with your token
+  mapboxgl.accessToken = 'pk.eyJ1IjoibWFzb253MDIiLCJhIjoiY205OTEzcXBpMDk0dTJpcHhseDl4dWNjOSJ9.tSqKSLEVU1A0vQ8kKHhxkw'; // Replace with your token
 
   const map = new mapboxgl.Map({
     container: 'map',
