--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -2,56 +2,85 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Route to San Diego - Mapbox GL JS v3 Compatible</title>
+  <title>Ultimate Frisbee Trips</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet" />
   <style>
-    body { margin: 0; padding: 0; }
-    #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+    body { margin: 0; padding: 0; font-family: sans-serif; }
+    #map { position: absolute; top: 40px; bottom: 0; width: 100%; }
+    #buttons {
+      position: absolute;
+      top: 0; left: 0;
+      background: #fff;
+      padding: 5px 10px;
+      z-index: 1;
+      display: flex;
+      gap: 10px;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.3);
+    }
+    button {
+      cursor: pointer;
+      padding: 6px 12px;
+      font-size: 14px;
+      border: none;
+      background: #0074D9;
+      color: white;
+      border-radius: 4px;
+    }
+    button:hover {
+      background: #005fa3;
+    }
   </style>
 </head>
 <body>
+<div id="buttons">
+  <button onclick="loadSanDiegoTrip()">San Diego</button>
+  <button onclick="loadKnoxvilleTrip()">Knoxville</button>
+</div>
 <div id="map"></div>
+
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoibWFzb253MDIiLCJhIjoiY205OTEzcXBpMDk0dTJpcHhseDl4dWNjOSJ9.tSqKSLEVU1A0vQ8kKHhxkw';
 
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v11',
-    center: [-121.0, 39.0],
+    center: [-121, 39],
     zoom: 5
   });
 
-  const origin = [-123.0707, 44.0435]; // McArthur Court, Eugene
-  const destination = [-117.1755, 32.8210]; // California Suites Hotel, San Diego
+  const markers = [];
+  let routeIds = [];
 
-  // Add static markers
-  new mapboxgl.Marker({ color: 'green' })
-    .setLngLat(origin)
-    .setPopup(new mapboxgl.Popup().setText("Start: McArthur Court"))
-    .addTo(map);
-
-  new mapboxgl.Marker({ color: 'red' })
-    .setLngLat(destination)
-    .setPopup(new mapboxgl.Popup().setText("End: California Suites Hotel"))
-    .addTo(map);
-
-  async function getRoute() {
-    const url = `https://api.mapbox.com/directions/v5/mapbox/driving/${origin[0]},${origin[1]};${destination[0]},${destination[1]}?geometries=geojson&overview=full&access_token=${mapboxgl.accessToken}`;
-
-    const response = await fetch(url);
-    const json = await response.json();
-    const data = json.routes[0];
-
-    if (!data || !data.geometry) {
-      console.error("No route found.");
-      return;
+  function clearMap() {
+    for (const id of routeIds) {
+      if (map.getLayer(id)) map.removeLayer(id);
+      if (map.getSource(id)) map.removeSource(id);
     }
+    routeIds = [];
 
-    const route = data.geometry;
+    for (const marker of markers) {
+      marker.remove();
+    }
+    markers.length = 0;
+  }
 
-    map.addSource('route', {
+  function addMarker(coords, label, color) {
+    const marker = new mapboxgl.Marker({ color })
+      .setLngLat(coords)
+      .setPopup(new mapboxgl.Popup().setText(label))
+      .addTo(map);
+    markers.push(marker);
+  }
+
+  async function addDrivingRoute(start, end, id) {
+    const url = `https://api.mapbox.com/directions/v5/mapbox/driving/${start[0]},${start[1]};${end[0]},${end[1]}?geometries=geojson&access_token=${mapboxgl.accessToken}`;
+    const res = await fetch(url);
+    const json = await res.json();
+    const route = json.routes[0].geometry;
+
+    map.addSource(id, {
       type: 'geojson',
       data: {
         type: 'Feature',
@@ -60,26 +89,102 @@
     });
 
     map.addLayer({
-      id: 'route',
+      id,
       type: 'line',
-      source: 'route',
-      layout: {
-        'line-join': 'round',
-        'line-cap': 'round'
-      },
+      source: id,
+      layout: { 'line-cap': 'round', 'line-join': 'round' },
       paint: {
         'line-color': '#0074D9',
         'line-width': 4
       }
     });
 
-    // Fit the map to the route
-    const bounds = new mapboxgl.LngLatBounds();
-    route.coordinates.forEach(coord => bounds.extend(coord));
-    map.fitBounds(bounds, { padding: 50 });
+    routeIds.push(id);
+    return route.coordinates;
   }
 
-  map.on('load', getRoute);
+  function addFlightArc(start, end, id) {
+    const arc = {
+      type: 'Feature',
+      geometry: {
+        type: 'LineString',
+        coordinates: interpolateArc(start, end)
+      }
+    };
+
+    map.addSource(id, {
+      type: 'geojson',
+      data: arc
+    });
+
+    map.addLayer({
+      id,
+      type: 'line',
+      source: id,
+      layout: {},
+      paint: {
+        'line-color': '#FF4136',
+        'line-width': 2,
+        'line-dasharray': [2, 4]
+      }
+    });
+
+    routeIds.push(id);
+    return arc.geometry.coordinates;
+  }
+
+  function interpolateArc(start, end) {
+    const steps = 50;
+    const arc = [];
+    for (let i = 0; i <= steps; i++) {
+      const lon = start[0] + (end[0] - start[0]) * (i / steps);
+      const lat = start[1] + (end[1] - start[1]) * (i / steps) + Math.sin((Math.PI * i) / steps) * 3;
+      arc.push([lon, lat]);
+    }
+    return arc;
+  }
+
+  function fitRoute(coordinates) {
+    const bounds = new mapboxgl.LngLatBounds();
+    coordinates.forEach(coord => bounds.extend(coord));
+    map.fitBounds(bounds, { padding: 60 });
+  }
+
+  async function loadSanDiegoTrip() {
+    clearMap();
+    const start = [-123.0707, 44.0435]; // McArthur Court
+    const end = [-117.1755, 32.8210]; // California Suites Hotel
+    addMarker(start, "Start: McArthur Court", 'green');
+    addMarker(end, "End: California Suites Hotel", 'red');
+
+    const coords = await addDrivingRoute(start, end, 'sd-route');
+    fitRoute(coords);
+  }
+
+  async function loadKnoxvilleTrip() {
+    clearMap();
+
+    const eugene = [-123.0707, 44.0435];
+    const pdx = [-122.5951, 45.5887];
+    const dfw = [-97.0403, 32.8998];
+    const tys = [-83.9940, 35.8101];
+    const hotel = [-84.0672, 35.9244];
+
+    addMarker(eugene, "Start: McArthur Court", 'green');
+    addMarker(pdx, "Portland International Airport", 'orange');
+    addMarker(dfw, "Dallas Fort Worth Airport", 'orange');
+    addMarker(tys, "McGhee Tyson Airport", 'orange');
+    addMarker(hotel, "End: Holiday Inn Knoxville West", 'red');
+
+    const car1 = await addDrivingRoute(eugene, pdx, 'drive1');
+    const flight1 = addFlightArc(pdx, dfw, 'flight1');
+    const flight2 = addFlightArc(dfw, tys, 'flight2');
+    const car2 = await addDrivingRoute(tys, hotel, 'drive2');
+
+    fitRoute([...car1, ...flight1, ...flight2, ...car2]);
+  }
+
+  map.on('load', loadSanDiegoTrip);
 </script>
 </body>
 </html>
