restored loadSanDiegoTrip() at end of script

--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -241,6 +241,8 @@
       fitRoute([...car1, ...flight1, ...flight2, ...car2]);
       summarizeDistance([...car1, ...car2], [...flight1, ...flight2]);
     }
+
+    map.on('load', loadSanDiegoTrip);
   </script>
 </body>
 </html>
