--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -5,12 +5,10 @@
   <title>Ultimate Frisbee Trips</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet" />
   <style>
     body { margin: 0; padding: 0; font-family: sans-serif; }
     #map { position: absolute; top: 40px; bottom: 0; width: 100%; }
-
     #buttons {
       position: absolute;
       top: 0; left: 0;
@@ -21,7 +19,6 @@
       gap: 10px;
       box-shadow: 0 1px 5px rgba(0,0,0,0.3);
     }
-
     button {
       cursor: pointer;
       padding: 6px 12px;
@@ -31,219 +28,227 @@
       color: white;
       border-radius: 4px;
     }
-
     button:hover {
       background: #005fa3;
     }
-
-    #distance-popup {
+    .popup-summary {
       position: absolute;
-      bottom: 20px;
+      top: 50px;
       right: 20px;
-      background: rgba(255,255,255,0.95);
-      padding: 10px 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      font-size: 14px;
+      background: rgba(255,255,255,0.9);
+      padding: 10px;
+      border-radius: 6px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
       z-index: 2;
-      max-width: 250px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <div id="buttons">
-    <button onclick="loadSanDiegoTrip()">President's Day Invitational</button>
-    <button onclick="loadKnoxvilleTrip()">Smoky Mountain Inivitational</button>
-    <button onclick="loadWilmingtonTrip()">Easterns</button>
-  </div>
-  <div id="map"></div>
-  <div id="distance-popup"></div>
+<div id="buttons">
+  <button onclick="loadSanDiegoTrip()">President's Day Invitational</button>
+  <button onclick="loadKnoxvilleTrip()">Smoky Mountain Inivitational</button>
+  <button onclick="loadWilmingtonTrip()">Easterns</button>
+</div>
+<div id="map"></div>
+<div id="summary" class="popup-summary" style="display: none;"></div>
 
-  <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoibWFzb253MDIiLCJhIjoiY205OTEzcXBpMDk0dTJpcHhseDl4dWNjOSJ9.tSqKSLEVU1A0vQ8kKHhxkw';
+<script>
+  mapboxgl.accessToken = 'pk.eyJ1IjoibWFzb253MDIiLCJhIjoiY205OTEzcXBpMDk0dTJpcHhseDl4dWNjOSJ9.tSqKSLEVU1A0vQ8kKHhxkw';
 
-    const map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox://styles/mapbox/streets-v11',
-      center: [-121, 39],
-      zoom: 5
+  const map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v11',
+    center: [-121, 39],
+    zoom: 5
+  });
+
+  const markers = [];
+  let routeIds = [];
+  let totalDrivingMiles = 0;
+  let totalFlightMiles = 0;
+
+  function clearMap() {
+    for (const id of routeIds) {
+      if (map.getLayer(id)) map.removeLayer(id);
+      if (map.getSource(id)) map.removeSource(id);
+    }
+    routeIds = [];
+
+    for (const marker of markers) {
+      marker.remove();
+    }
+    markers.length = 0;
+
+    totalDrivingMiles = 0;
+    totalFlightMiles = 0;
+    document.getElementById('summary').style.display = 'none';
+  }
+
+  function addMarker(coords, label, color) {
+    const marker = new mapboxgl.Marker({ color })
+      .setLngLat(coords)
+      .setPopup(new mapboxgl.Popup().setText(label))
+      .addTo(map);
+    markers.push(marker);
+  }
+
+  async function addDrivingRoute(start, end, id) {
+    const url = `https://api.mapbox.com/directions/v5/mapbox/driving/${start[0]},${start[1]};${end[0]},${end[1]}?geometries=geojson&access_token=${mapboxgl.accessToken}`;
+    const res = await fetch(url);
+    const json = await res.json();
+    const route = json.routes[0].geometry;
+    const distance = json.routes[0].distance; // in meters
+    totalDrivingMiles += distance / 1609.34;
+
+    map.addSource(id, {
+      type: 'geojson',
+      data: {
+        type: 'Feature',
+        geometry: route
+      }
     });
 
-    const markers = [];
-    let routeIds = [];
-
-    function clearMap() {
-      for (const id of routeIds) {
-        if (map.getLayer(id)) map.removeLayer(id);
-        if (map.getSource(id)) map.removeSource(id);
+    map.addLayer({
+      id,
+      type: 'line',
+      source: id,
+      layout: { 'line-cap': 'round', 'line-join': 'round' },
+      paint: {
+        'line-color': '#0074D9',
+        'line-width': 4
       }
-      routeIds = [];
+    });
 
-      for (const marker of markers) {
-        marker.remove();
+    routeIds.push(id);
+    return route.coordinates;
+  }
+
+  function haversineDistance(coord1, coord2) {
+    const toRad = d => d * Math.PI / 180;
+    const R = 6371; // Earth radius in km
+    const dLat = toRad(coord2[1] - coord1[1]);
+    const dLon = toRad(coord2[0] - coord1[0]);
+    const lat1 = toRad(coord1[1]);
+    const lat2 = toRad(coord2[1]);
+
+    const a = Math.sin(dLat/2) ** 2 + Math.cos(lat1) * Math.cos(lat2) * Math.sin(dLon/2) ** 2;
+    const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+    return R * c * 0.621371; // convert to miles
+  }
+
+  function addFlightArc(start, end, id) {
+    const arc = {
+      type: 'Feature',
+      geometry: {
+        type: 'LineString',
+        coordinates: interpolateArc(start, end)
       }
-      markers.length = 0;
+    };
 
-      document.getElementById('distance-popup').innerText = ''; // Clear popup
-    }
+    totalFlightMiles += haversineDistance(start, end);
 
-    function addMarker(coords, label, color) {
-      const marker = new mapboxgl.Marker({ color })
-        .setLngLat(coords)
-        .setPopup(new mapboxgl.Popup().setText(label))
-        .addTo(map);
-      markers.push(marker);
-    }
+    map.addSource(id, {
+      type: 'geojson',
+      data: arc
+    });
 
-    async function addDrivingRoute(start, end, id) {
-      const url = `https://api.mapbox.com/directions/v5/mapbox/driving/${start[0]},${start[1]};${end[0]},${end[1]}?geometries=geojson&access_token=${mapboxgl.accessToken}`;
-      const res = await fetch(url);
-      const json = await res.json();
-      const route = json.routes[0].geometry;
-
-      map.addSource(id, {
-        type: 'geojson',
-        data: {
-          type: 'Feature',
-          geometry: route
-        }
-      });
-
-      map.addLayer({
-        id,
-        type: 'line',
-        source: id,
-        layout: { 'line-cap': 'round', 'line-join': 'round' },
-        paint: {
-          'line-color': '#0074D9',
-          'line-width': 4
-        }
-      });
-
-      routeIds.push(id);
-      return route.coordinates;
-    }
-
-    function addFlightArc(start, end, id) {
-      const arcCoords = interpolateArc(start, end);
-      const arc = {
-        type: 'Feature',
-        geometry: {
-          type: 'LineString',
-          coordinates: arcCoords
-        }
-      };
-
-      map.addSource(id, {
-        type: 'geojson',
-        data: arc
-      });
-
-      map.addLayer({
-        id,
-        type: 'line',
-        source: id,
-        layout: {},
-        paint: {
-          'line-color': '#FF4136',
-          'line-width': 2,
-          'line-dasharray': [2, 4]
-        }
-      });
-
-      routeIds.push(id);
-      return arcCoords;
-    }
-
-    function interpolateArc(start, end) {
-      const steps = 50;
-      const arc = [];
-      for (let i = 0; i <= steps; i++) {
-        const lon = start[0] + (end[0] - start[0]) * (i / steps);
-        const lat = start[1] + (end[1] - start[1]) * (i / steps) + Math.sin((Math.PI * i) / steps) * 3;
-        arc.push([lon, lat]);
+    map.addLayer({
+      id,
+      type: 'line',
+      source: id,
+      layout: {},
+      paint: {
+        'line-color': '#FF4136',
+        'line-width': 2,
+        'line-dasharray': [2, 4]
       }
-      return arc;
+    });
+
+    routeIds.push(id);
+    return arc.geometry.coordinates;
+  }
+
+  function interpolateArc(start, end) {
+    const steps = 50;
+    const arc = [];
+    for (let i = 0; i <= steps; i++) {
+      const lon = start[0] + (end[0] - start[0]) * (i / steps);
+      const lat = start[1] + (end[1] - start[1]) * (i / steps) + Math.sin((Math.PI * i) / steps) * 3;
+      arc.push([lon, lat]);
     }
+    return arc;
+  }
 
-    function fitRoute(coordinates) {
-      const bounds = new mapboxgl.LngLatBounds();
-      coordinates.forEach(coord => bounds.extend(coord));
-      map.fitBounds(bounds, { padding: 60 });
-    }
+  function fitRoute(coordinates) {
+    const bounds = new mapboxgl.LngLatBounds();
+    coordinates.forEach(coord => bounds.extend(coord));
+    map.fitBounds(bounds, { padding: 60 });
+  }
 
-    function summarizeDistance(drivingCoords, flightCoords) {
-      const driveLine = turf.lineString(drivingCoords);
-      const flightLine = turf.lineString(flightCoords);
-      const driveMiles = turf.length(driveLine, { units: 'miles' }).toFixed(1);
-      const flightMiles = turf.length(flightLine, { units: 'miles' }).toFixed(1);
+  function showSummary() {
+    const el = document.getElementById('summary');
+    el.innerHTML = `Total Driving: ${totalDrivingMiles.toFixed(1)} mi<br>Total Flying: ${totalFlightMiles.toFixed(1)} mi`;
+    el.style.display = 'block';
+  }
 
-      document.getElementById('distance-popup').innerText = 
-        `🚗 Driving Distance: ${driveMiles} mi\n✈️ Flight Distance: ${flightMiles} mi`;
-    }
+  async function loadSanDiegoTrip() {
+    clearMap();
+    const start = [-123.0707, 44.0435];
+    const end = [-117.1755, 32.8210];
+    addMarker(start, "Start: McArthur Court", 'green');
+    addMarker(end, "End: California Suites Hotel", 'red');
 
-    async function loadSanDiegoTrip() {
-      clearMap();
-      const start = [-123.0707, 44.0435];
-      const end = [-117.1755, 32.8210];
-      addMarker(start, "Start: McArthur Court", 'green');
-      addMarker(end, "End: California Suites Hotel", 'red');
+    const coords = await addDrivingRoute(start, end, 'sd-route');
+    fitRoute(coords);
+    showSummary();
+  }
 
-      const coords = await addDrivingRoute(start, end, 'sd-route');
-      fitRoute(coords);
-      summarizeDistance(coords, []);
-    }
+  async function loadKnoxvilleTrip() {
+    clearMap();
+    const eugene = [-123.0707, 44.0435];
+    const pdx = [-122.5951, 45.5887];
+    const dfw = [-97.0403, 32.8998];
+    const tys = [-83.9940, 35.8101];
+    const hotel = [-84.0672, 35.9244];
 
-    async function loadKnoxvilleTrip() {
-      clearMap();
+    addMarker(eugene, "Start: McArthur Court", 'green');
+    addMarker(pdx, "Portland International Airport", 'orange');
+    addMarker(dfw, "Dallas Fort Worth Airport", 'orange');
+    addMarker(tys, "McGhee Tyson Airport", 'orange');
+    addMarker(hotel, "End: Holiday Inn Knoxville West", 'red');
 
-      const eugene = [-123.0707, 44.0435];
-      const pdx = [-122.5951, 45.5887];
-      const dfw = [-97.0403, 32.8998];
-      const tys = [-83.9940, 35.8101];
-      const hotel = [-84.0672, 35.9244];
+    const car1 = await addDrivingRoute(eugene, pdx, 'drive1');
+    const flight1 = addFlightArc(pdx, dfw, 'flight1');
+    const flight2 = addFlightArc(dfw, tys, 'flight2');
+    const car2 = await addDrivingRoute(tys, hotel, 'drive2');
 
-      addMarker(eugene, "Start: McArthur Court", 'green');
-      addMarker(pdx, "Portland International Airport", 'orange');
-      addMarker(dfw, "Dallas Fort Worth Airport", 'orange');
-      addMarker(tys, "McGhee Tyson Airport", 'orange');
-      addMarker(hotel, "End: Holiday Inn Knoxville West", 'red');
+    fitRoute([...car1, ...flight1, ...flight2, ...car2]);
+    showSummary();
+  }
 
-      const car1 = await addDrivingRoute(eugene, pdx, 'drive1');
-      const flight1 = addFlightArc(pdx, dfw, 'flight1');
-      const flight2 = addFlightArc(dfw, tys, 'flight2');
-      const car2 = await addDrivingRoute(tys, hotel, 'drive2');
+  async function loadWilmingtonTrip() {
+    clearMap();
+    const eugene = [-123.0707, 44.0435];
+    const pdx = [-122.5951, 45.5887];
+    const den = [-104.6737, 39.8561];
+    const rdu = [-78.7875, 35.8801];
+    const hotel = [-77.8646, 34.2413];
 
-      fitRoute([...car1, ...flight1, ...flight2, ...car2]);
-      summarizeDistance([...car1, ...car2], [...flight1, ...flight2]);
-    }
+    addMarker(eugene, "Start: McArthur Court", 'green');
+    addMarker(pdx, "Portland International Airport", 'orange');
+    addMarker(den, "Denver International Airport", 'orange');
+    addMarker(rdu, "Raleigh-Durham Airport", 'orange');
+    addMarker(hotel, "End: Tru by Hilton Wilmington", 'red');
 
-    async function loadWilmingtonTrip() {
-      clearMap();
+    const car1 = await addDrivingRoute(eugene, pdx, 'wilm-drive1');
+    const flight1 = addFlightArc(pdx, den, 'wilm-flight1');
+    const flight2 = addFlightArc(den, rdu, 'wilm-flight2');
+    const car2 = await addDrivingRoute(rdu, hotel, 'wilm-drive2');
 
-      const eugene = [-123.0707, 44.0435];
-      const pdx = [-122.5951, 45.5887];
-      const den = [-104.6737, 39.8561];
-      const rdu = [-78.7875, 35.8801];
-      const hotel = [-77.8646, 34.2413];
-
-      addMarker(eugene, "Start: McArthur Court", 'green');
-      addMarker(pdx, "Portland International Airport", 'orange');
-      addMarker(den, "Denver International Airport", 'orange');
-      addMarker(rdu, "Raleigh-Durham Airport", 'orange');
-      addMarker(hotel, "End: Tru by Hilton Wilmington", 'red');
-
-      const car1 = await addDrivingRoute(eugene, pdx, 'wilm-drive1');
-      const flight1 = addFlightArc(pdx, den, 'wilm-flight1');
-      const flight2 = addFlightArc(den, rdu, 'wilm-flight2');
-      const car2 = await addDrivingRoute(rdu, hotel, 'wilm-drive2');
-
-      fitRoute([...car1, ...flight1, ...flight2, ...car2]);
-      summarizeDistance([...car1, ...car2], [...flight1, ...flight2]);
-    }
-
-    map.on('load', loadSanDiegoTrip);
-  </script>
+    fitRoute([...car1, ...flight1, ...flight2, ...car2]);
+    showSummary();
+  }
+</script>
 </body>
 </html>
-
