restored map.on('load', loadSanDiegoTrip) again

--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -249,6 +249,7 @@
     fitRoute([...car1, ...flight1, ...flight2, ...car2]);
     showSummary();
   }
+  map.on('load', loadSanDiegoTrip);
 </script>
 </body>
 </html>
