description panel test fixes

--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -71,6 +71,18 @@ button:hover {
     overflow: hidden;
     border-radius: 7px;
     }
+
+   .layerDescription {
+     color: white;
+     padding-left: 10px;
+   }
+
+   .chevron {
+     position: relative;
+     margin-left: 45%;
+     font-size: x-large;
+     color: white;
+   }
   </style>
 </head>
 <body>
